translation-tool/inputs/source_meta/objects/Hsvc_CallMeSetup__mdt.object
<CustomObject>
    <description>Call Me function can be enabled for other countries Based of a configuration in a custom metadata</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                    <default>true</default>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_AspectURLLabel__c</fullName>
        <description>Captures the custom label name for aspect url</description>
        <label>Aspect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BusinessModel__c</fullName>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                    <default>true</default>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>ConsumerVAR</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_CountryCodePrefix__c</fullName>
        <label>Country Code Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_EnableCallMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Call Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_PhoneNumValidationRegex__c</fullName>
        <label>Phone Number Validation Regex</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ServiceID__c</fullName>
        <label>Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Call Me Setup</label>
    <pluralLabel>Call Me Setup</pluralLabel>
</CustomObject>